--- a/resources/mods/loader_config.toml
+++ b/resources/mods/loader_config.toml
@@ -1,5 +1,5 @@
 # GoW Script Loader & Gameplay Tweaks
-# Source code: <TBD>
+# Source code: https://github.com/Nukem9/gow-gameplay-tweaks
 #
 # This is a BETA release. Expect bugs.
 
